<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey.GoalQuestionFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/what_u_goal"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>
    <RadioGroup
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/weight_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_loss"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/weight_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_gain"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/drying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drying"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/maintaining_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_mass"
            android:textSize="16sp"/>

    </RadioGroup>
    <Button
        android:id="@+id/next_btn"
        android:enabled="false"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/further"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

</LinearLayout>