<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey.ActivityQuestionFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/what_u_activity_lvl"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>
    <RadioGroup
        android:id="@+id/activity_lvl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/sedentary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedentary"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/moderately_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderately_active"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/very_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_active"
            android:textSize="16sp"/>

    </RadioGroup>
    <Button
        android:id="@+id/next_btn"
        android:enabled="false"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/further"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>


</LinearLayout>