<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.LogIn.LogInFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/input_log_pass"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/user_name"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/log_in_btn"

        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>




</LinearLayout>