<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey.HeightQuestionFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/what_u_height"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/print_height"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/next_btn"
        android:enabled="false"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/further"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

</LinearLayout>