<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.LoginOrSignupFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogIn_or_SignUp"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/black_1"/>
    <Button
        android:id="@+id/log_in_btn"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/sign_up_btn"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:layout_marginTop="15dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

</LinearLayout>